--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ html, body {
   justify-content: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .upper-layout {
     padding: 8rem 0 2rem 0;
   }
